--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software Developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Nigeria.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I am a musician and lyricist.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream Job would be Video Game programmer by day and musical artist by night.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I am a resident of Raleigh, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to positively impact people by utilizing my technology skills.</p>
     </section>
 
     <footer id="footer">
