updating our details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I am a musician and lyricist.</p>
       <h1>What's your dream job?</h1>
-      <p>My dream job would be Video Game programmer by day and musical artist by night.</p>
+      <p>My dream job would allow me to design video games by day and make music by night.</p>
       <h1>Where do you live?</h1>
       <p>I am a resident of Raleigh, NC</p>
       <h1>Why do you want to be a web developer?</h1>
